--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_modular: ^6.3.4
   firebase_core: ^3.8.0
   cloud_firestore: ^5.5.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
