--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   url_launcher: ^6.3.1
   provider: ^6.1.2
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
