--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   url_launcher: ^6.3.1
   provider: ^6.1.2
   crypto: ^3.0.6
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
