--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.8
   flutter_modular: ^6.3.4
@@ -19,6 +21,7 @@ dependencies:
   provider: ^6.1.2
   crypto: ^3.0.6
   flutter_secure_storage: ^9.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
