--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   crypto: ^3.0.6
   flutter_secure_storage: ^9.2.2
   intl: ^0.19.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.7
 
 dev_dependencies:
   flutter_test:
